--- a/style.css
+++ b/style.css
@@ -7,25 +7,89 @@ html {
     background-position: center;
 }
 
-/* #main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  } */
+/* THIS IS NEW */
+#main {
+  font-family: 'MedievalSharp', cursive;
+}
+
+#name {
+  font-family: 'MedievalSharp', cursive;
+}
+
+input{
+  width: 250px; 
+  height: 30px;
+  border: none;
+  opacity: 0.6;
+  background-color: #FCF5E5;
+  padding: 5px 15px;
+  border-radius: 12px;
+}
 
 
+input:hover {
+  box-shadow: rgb(255, 255, 255) 0px 22px 70px 4px;  
+  /* box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(0,0,0,0.19); */
+  transition-duration: 0.5s;
+}
+
+#button {
+  opacity: 0.6;
+  background-color: #FCF5E5;
+  width: 80px;
+  height: 30px;
+  font-family: 'MedievalSharp';
+  font-weight: light;
+  font-size: 13px;
+  text-align: center;
+  display: inline-block;
+  border-radius: 12px;
+  border: none;
+  margin-left: 20px;
+ 
+
+}
+
+#button:hover {
+  box-shadow: rgb(255, 255, 255) 0px 22px 70px 4px;  
+  transition-duration: 0.5s;
+}
+
+#delete-button {
+  font-family: 'MedievalSharp';
+
+
+}
+
+#quote-button {
+  font-family: 'MedievalSharp';
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 15px;
+  margin-top: 20px;
+  margin-left: 40px;
+
+  
+
+}
 
 h1 {
       text-align: center;
       position: sticky; 
       font-family: 'Bilbo', cursive;
+
+      opacity: 0.7;
+      font-size: 48px;
   }
 
 h2 {
 
       text-align: center;
       font-family: 'MedievalSharp', cursive;
+      opacity: 0.9;
   }
+
+/* This is where I stopped */
 
 li {
     list-style-type: none;
