--- a/style.css
+++ b/style.css
@@ -53,7 +53,10 @@ input:hover {
 }
 
 #delete-button {
-  font-family: "MedievalSharp";
+  justify-content: flex-end; 
+  margin-left: 260px; 
+  width: 30px;
+  height: 30px;
 }
 
 #quote-button {
@@ -61,8 +64,7 @@ input:hover {
   text-align: center;
   text-transform: uppercase;
   font-size: 15px;
-  margin-top: 20px;
-  margin-left: 20px;
+  margin-top: 45px;
   background-color:  #fcf5e575;
   border-radius: 8px;
   padding: 5px;
@@ -110,6 +112,9 @@ h2 {
 
 /* This is where I stopped */
 
+ul{
+  list-style-type: none; 
+}
 li {
   list-style-type: none;
 }
@@ -118,10 +123,10 @@ li {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-content: center;
   align-items: center;
-
+  flex-flow: row wrap;
+  justify-content: space-around;
 }
 
 
@@ -135,21 +140,15 @@ li {
   flex-direction: column;
   max-width: 100%;
   max-height: 100%;
-  
   background-size: 600px;
   -webkit-transition: transform 0.6s;
   transform-style: preserve-3d;
 }
 
-#delete-button {
-  float: right;
-  width: 30px;
-  height: 30px;
-}
 
 #delete-button:hover {
   transform: scale(1.3); 
-  transition-duration: 0.5; 
+  transition-duration: 0.5
 }
 
 
@@ -174,6 +173,7 @@ li {
   backface-visibility: hidden;
   display: flex;
   flex-direction: column;
+  border-radius: 8px;
 }
 .cardFront {
   width: 300px;
@@ -214,16 +214,10 @@ li {
   text-align: center;
   text-transform: uppercase;
   font-size: 15px;
-  margin-top: 20px;
-  margin-left: 20px;
+  margin-top: 45px;
   background-color:  #fcf5e575;
   border-radius: 8px;
   padding: 5px;
   padding-left: 10px;
   padding-right: 10px;
-}
-
-#listContainer.flipBack {
-  transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
 }
